# couchers-emails-v3

./: Readme.md  email_models.py  en.json  pyproject.toml  render.py  script.py
templates/: HostRequestReceived.jinja2  HostRequestReceived.untranslated.jinja2
templates/include/: body_html_layout.jinja2  body_html_macros.jinja2  body_plaintext_layout.jinja2  body_plaintext_macros.jinja2  subject_layout.jinja2  subject_macros.jinja2
